<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".login.LoginActivity" >

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logoImg"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Logo"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/signUp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="20dp"
        android:layout_marginBottom="150dp"
        android:layout_above="@id/CreateAccount"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:ems="11"
                    android:hint="@string/Uname"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/userImg"
                    app:srcCompat="@drawable/user_account"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ems="11"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/lockImg"
                    tools:ignore="ImageContrastCheck"
                    app:srcCompat="@drawable/passkey" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:text="@string/forgotPass" />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_btn"
                android:elevation="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/login" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/createAccount" />

</RelativeLayout>